--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "hirethunk/verbs": "^0.7.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1"
     },
