--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "filament/filament": "^3.3",
         "hirethunk/verbs": "^0.7.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "phpdocumentor/reflection-docblock": "^5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
